tests/manifests/default-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
  namespace: test
spec:
  podSelector: {}
  egress:
  - namespaceSelector:
      matchLabels:
        name: default
  policyTypes:
  - Egress
